получение всех пользователей; изменение роли указанного пользоватля